[package]
name = "toml-lalrpop"
version = "0.1.0"
authors = ["kgv <kgv@users.noreply.github.com>"]
edition = "2018"
description = "Comment preserving TOML parser"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.31"
chrono = "0.4.11"
derive-new = "0.5"
derive_more = "0.99.7"
env_logger = "0.7.1"
indexmap = { version = "1.4.0", features = ["serde-1"] }
itertools = "0.9.0"
lalrpop-util = "0.19.0"
log = "0.4.8"
optional-index = { version = "0.1.0", git = "https://github.com/kgv/optional-index" }
pad-adapter = "0.1.1"
serde = { version = "1.0.111", features = ["derive"] }
serde-diff = "0.3.0"
thiserror = "1.0.19"
toml = { version = "0.5.6", optional = true, features = ["preserve_order"] }

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[features]
default = ["toml"]
drain-filter = ["nightly"]
nightly = ["unstable"]
unstable = []